--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,19 @@ header {
     display: flex;
 }
 nav ul{
-    list-style-type: none;
-    text-decoration:none;
     padding:0;
     margin:0;
     display:flex;
     justify-content:flex-end;
-    font-family: 'Poppins', sans-serif;
+   
 }
 
+nav ul li{
+    padding-right:1rem;
+    padding-left:1rem;
+    list-style-type: none;
+    font-family: 'Poppins', sans-serif;
+}
 nav p{
     padding:0;
     margin:0;
@@ -84,7 +88,35 @@ blockquote {
 
 .portfolio-pieces {
     display:grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto ;
-  
+    /* grid-template-columns: 3fr 3fr;
+    grid-template-rows: 2fr 2fr 2fr; */
+    grid-column-gap:0px;
+    grid-row-gap: 0px;
+}
+
+.piece-1 {
+    grid-column: 1/ span 3;
+    grid-row: 1;
+    grid-column-gap:0px;
+    grid-row-gap: 0px;
+}
+
+.piece-2 {
+    grid-column: 2/ span 3;
+    grid-row: 1;
+}
+
+.piece-3 {
+    grid-column: 1/ span 2;
+    grid-row: 2;
+}
+
+.piece-4 {
+    grid-column: 2/ span 2;
+    grid-row: 2;
+}
+
+.piece-5 {
+    grid-column: 3/ span 2;
+    grid-row: 2;
 }
