Update css and link a new font in html

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
-/* html{
+html{
     box-sizing: border-box;
 }
 
 *,*::before, *::after {
     box-sizing:inherit;
 }
-
 
 
 /* div {
@@ -37,24 +36,48 @@ nav ul li{
     padding-right:1rem;
     padding-left:1rem;
     list-style-type: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Arimo', sans-serif;
+    color: white;
 }
+
 nav p{
     padding:0;
     margin:0;
     display:flex;
     justify-content:flex-start;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Arimo', sans-serif;
+    color: white;
 }
 
 nav img{
     width:100%;
     padding: 2.5rem ;
     background-color: black;
+}
 
+h1{
+    font-family: 'Arimo', sans-serif;
+    font-weight: 700;
+}
+
+h2{
+    font-family: 'Arimo', sans-serif;
+    font-weight: 600; 
+}
+
+h3{
+    font-family: 'Arimo', sans-serif;
+    font-weight: 500; 
+}
+
+p{
+    font-family: 'Arimo', sans-serif;
+    font-weight: 400;
 }
 .services {
     display:flex;
+    background-color: #f5f5f5;
+    width: 100%;
 }
 
 .services div {
@@ -67,14 +90,6 @@ nav img{
 /* .services p {
     flex-grow: 1;
 } */
-
-blockquote {
-    display:flex;
-}
-
-.social-icons {
-    width:50px;
-}
 
 /* .social-icons div{
     display:block;
@@ -119,4 +134,18 @@ blockquote {
 .piece-5 {
     grid-column: 3/ span 2;
     grid-row: 2;
+}
+
+.block-quotes{
+    background-color: black;
+    width: 100%;
+    color:white;
+}
+
+blockquote {
+    display:flex;
+}
+
+.social-icons {
+    width:50px;
 }
