--- a/css/style.css
+++ b/css/style.css
@@ -6,26 +6,21 @@ html{
     box-sizing:inherit;
 }
 
-
-/* div {
-    max-width: ;
-} */
-
-/* img{
-    max-width: 1200px;
-    margin: 0 auto;
-} */ 
+html{
+    max-width:1280px
+}
 
 header {
-    background-color: black;
+    background-color: #0e1215;
     width: 100%;
 }
 
 nav {
+    width: 100;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: #0e1215;
     background-size: 100%;
 }
 
@@ -37,7 +32,6 @@ nav ul {
    
 }
 
-/* Find a way to make everything at the top line up */
 nav ul li {
     padding-right:1rem;
     padding-left:1rem;
@@ -55,7 +49,7 @@ nav p {
     justify-content:flex-start;
     font-family: 'Arimo', sans-serif;
     font-weight: 600;
-    font-size: 2em;
+    font-size: 1.5em;
     color: white;
 }
 
@@ -65,24 +59,17 @@ nav a:visited{
     text-decoration: none;
 }
 
-nav a:hover,
-nav a:focus{
-    color:#aad7d2;
-    text-decoration: none;
-}
-
 header img {
     width:100%;
-    padding: 2.5rem ;
-    background-color: black;
+    padding: 1.5rem 2rem 1.5rem 2rem;
+    background-color: #0e1215;
 }
-
 
 .about {
     display: flex;
+    margin-top: 4.5rem;
 }
 
-/* Make bio-pic image  go all th way to the end of the page when expnading*/
 .about img {
     display: flex;
     justify-content:flex-end;
@@ -90,11 +77,13 @@ header img {
 
 h1 {
     font-family: 'Arimo', sans-serif;
+    font-size: 3rem;
     font-weight: 700;
 }
 
 h2 {
     font-family: 'Arimo', sans-serif;
+    font-size: 2rem;
     font-weight: 600; 
     text-align:center;
 }
@@ -105,7 +94,8 @@ h2 {
 
 h3 {
     font-family: 'Arimo', sans-serif;
-    font-weight: 500; 
+    font-size: 1.3rem;
+    font-weight: 700; 
 }
 
 p {
@@ -114,17 +104,32 @@ p {
     max-width: 33em;
 }
 
-/* Find out a way to make the subtitle 'What I can do for you...' in the gray background */
+#services{
+    background-color: #fafafa;
+   padding: 60px 65px 125px;
+   color: #0E1215; 
+}
+ 
 .services {
     display:flex;
-    background-color: #f5f5f5;
-    background-size: 200em;
-    /* width: 200em; */
+    background-color: #fafafa ;
+    background-size: 100%;
     max-width: 100%;
+    padding: 75px;
 }
+
 #services h2 {
     text-align:center;
+    padding-bottom: 20px;
 }
+
+#services .services {
+    display: flex;
+    column-gap: 20px;
+    justify-content: center;
+    padding: 0px 10px;
+    border-radius: 10px;
+ }
 
 .services div {
   width:50%;
@@ -134,26 +139,29 @@ p {
 }
 
 .services a{
-    padding: .1em .25em .1em .25em;
-    border-radius:4px;
-    /* display:inline; */
+    margin: .5rem;
+    padding: .25em;
+    border-radius: 5px;
+    width: 130px;
+    height: 30px;
+    text-align: center;
     font-family: 'Arimo', sans-serif;
-    font-weight:400;
+    font-weight:600;
 }
 
 .services a:link, 
 .services a:visited{
-    background-color:black;
+    background-color:#0e1215;
     color:white;
-    border:1px solid black;
+    border:1px solid #0e1215;
     text-decoration: none;
-  }
+}
 
   
 .services a:hover,
 .services a:focus{
     background-color:white;
-    color: black;
+    color: #0e1215;
     border:2px solid black;
   }
 
@@ -161,114 +169,118 @@ p {
     flex-grow: 1;
 }
 
-/* Create backgrounds behind each service and buttins for the 'Learn More' */
 .service-1{
     background-color:white;
-    border:1px solid #bcbcbc;
+    border:2px solid #f1efef;
     padding: .1em .25em .1em .25em;
-    border-radius:4px;
+    border-radius:8px;
+}   
+
+.service-1 p:nth-child(3){
+    margin-top: -2rem;
 }
-/* .service-2
-.service-3 */
+
+.service-2{
+    background-color:white;
+    border:2px solid #f1efef;
+    padding: .1em .25em .1em .25em;
+    border-radius:8px;
+}
+
+.service-2 p:nth-child(3){
+    margin-top: -2rem;
+}
+
+.service-3{
+    background-color:white;
+    border:2px solid #f1efef;
+    padding: .1em .25em .1em .25em;
+    border-radius:8px;
+}
+
+.service-3 p:nth-child(3){
+    margin-top: .1rem;
+}
 
 #my-work p{
     text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 50px auto 50px auto;
 }
 
 #contact-me p{
     text-align: center;
-    display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* .social-icons div{
-    display:block;
-    justify-content: space-evenly;
-} */
-
-/* .social-icons div{
-    display:flex;
-    flex-direction: row;
-} */
-
-
-/* Fix everything going on with the grid */
 .portfolio-pieces {
     display:grid;
-    /* grid-template-columns: repeat(1fr); */
     grid-template-columns: repeat(6/ 1fr);
-    /* margin: 0;
-    padding: 0; */
-    grid-gap: 0px;
-    justify-items: stretch;
-    align-items: center;
+    padding: 0 3rem 0 3rem;
+    margin-bottom: 50px;
 }
 
-.piece-1 {
-    grid-column: 1/ span 3;
+.portfolio-pieces img:nth-child(1){
+    grid-column: 1/4;
     grid-row: 1;
-    justify-self:stretch;
-    /* margin: 0; */
+    margin: 0;
+    width: 100%;
     
 }
 
-.piece-2 {
-    grid-column: 4/ span 7;
+.portfolio-pieces img:nth-child(2){
+    grid-column: 4/7;
     grid-row: 1;
-    
-    /* margin: 0; */
+    margin: 0;
+    width: 100%;
 }
 
-.piece-3 {
-    grid-column: 1/ span 2;
+.portfolio-pieces img:nth-child(3){
+    grid-column: 1/3;
     grid-row: 2;
-    justify-self:stretch;
-    /* margin: 0; */
+    margin: 0;
+    width: 100%;
 }
 
-.piece-4 {
-    grid-column: 3/ span 2;
+.portfolio-pieces img:nth-child(4){
+    grid-column: 3/5;
     grid-row: 2;
-    /* margin: 0; */
+    margin: 0;
+    width: 100%;
 }
 
-.piece-5 {
-    grid-column: 5/ span 2;
+.portfolio-pieces img:nth-child(5){
+    grid-column: 5/7;
     grid-row: 2;
-    /* margin: 0; */
+    margin: 0;
+    width: 100%;
+}
+
+.block-quotes {
+    background-color: #0e1215;
+    padding-top: 60px;
+    color: white 
+}
+
+.block-quotes h2{
+    margin-bottom: -3.5rem;
 }
 
 .block {
     display:flex;
-    background-color: black;
+    background-color: #0e1215;
     width: 100%;
     color:white;
+    padding: 85px;
 }
-
-/* .block-quotes div {
-    width:50%;
-    padding: .5em;
-    display:flex;
-    flex-direction: column;
-  } */
 
 .block div {
     width:50%;
     padding: .5em;
     display:flex;
     flex-direction: column;
-  }
-/* some issues here have to be fixed */
-
-.block p{
-    font-weight:400;
-    font-size: .70rem;
-    color: #bcbcbc;
 }
+
 blockquote {
     font-family: 'Arimo', sans-serif;
     font-weight:400;
@@ -278,23 +290,52 @@ blockquote {
     max-width: 33em;
 }
 
-
-/* .block p{
-    flex-grow: 1;
-} */
+cite {
+    font-family: 'Arimo', sans-serif;
+    font-weight:400;
+    font-size: .70rem;
+    font-style: normal;
+    color: #a2a2a2;
+    text-align:center;
+}
 
 /* Make the blockquotes italic and lined up correctly */
 
-/* Make the icons horizontal and centered (probably with flex) */
+#my-work {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+    text-align: center;
+    margin-top: .25rem;
+}
+
+#contact-me {
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
+    text-align: center;
+    margin-left: 15rem;
+    margin-right: 15rem;
+ }
+
 .social-icons {
-    width:35px;
+    display: flex;
+    justify-content:center;
+    list-style-type: none;
+    padding:0;
+}
+
+.social-icons img {
+    width: 50px;
+    padding: 0 6px;
+    margin-top: -3rem;
+    margin-bottom: 5.5rem;
 }
 
 footer{
-    display:flex;
-    background-color: black;
+    display: flex;
+    background-color: #0e1215;
     width: 100%;
     color:white;
+    
 }
 
 footer p{
